# sigtrader

./: .gitignore  README.md  TODO.md  futures_analyzer.config.json
sigforge/: .gitignore  README.md  futures_analyzer.config.json  pyproject.toml  sigforge_refactor_plan.md
sigforge/futures_analyzer/: _config_template.py  cli.py  config.py  config_presets.py  defaults.py  logging.py  portfolio.py
sigforge/futures_analyzer/analysis/: DECOMPOSITION_GUIDE.md  __init__.py  concurrency.py  confidence.py  decay.py  evidence.py  geometry.py  indicators.py  long_entry_filters.py  long_pipeline_log.py  models.py  normalization.py  regime.py  replay.py  scorer.py  validation.py
sigforge/futures_analyzer/backtest/: __init__.py  (+4 more)
sigforge/tests_futures/: conftest.py  test_config.py  test_engine.py  test_enhanced_metrics_boost.py  test_history.py  test_provider.py  test_regime.py  test_replay.py  test_rsi_divergence.py  test_scoring_components.py  test_timeframes.py
sigforge/tmp/: indicators_append.py  make_geometry.py  patch_analyzer.py  patch_config.py  patch_deliberation.py  patch_geometry.py  patch_geometry_v2.py  patch_soft_filters.py  scorer_v06.py
sigwatch/: .gitignore  Dockerfile  README.md  bot_config.json  futures_analyzer.config.json  pyproject.toml  requirements.txt  run.py
sigwatch/bot/: config.py  loop.py
sigwatch/execution/: __init__.py  executor.py  monitor.py
sigwatch/futures_analyzer/: __main__.py  cli.py  config.py  config_presets.py  portfolio.py  reporting.py
sigwatch/providers/: __init__.py  coindcx.py
sigwatch/tests_futures/: test_cli.py  test_config.py  test_engine.py  test_history.py
(+29 files in other folders)
