[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sigwatch"
version = "0.1.0"
description = "24/7 automated trading bot for CoinDCX perpetual markets."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[tool.setuptools.packages.find]
include = [
    "futures_analyzer",
    "futures_analyzer.analysis",
    "futures_analyzer.backtest",
    "futures_analyzer.history",
    "futures_analyzer.market",
    "futures_analyzer.providers",
    "bot",
    "execution",
    "providers",
]

[tool.pytest.ini_options]
testpaths = ["tests_futures"]
